--- a/fruteriaManoli/src/app/pages/listado-productos/listado-productos.component.html
+++ b/fruteriaManoli/src/app/pages/listado-productos/listado-productos.component.html
@@ -1,3 +1,5 @@
+<h2> lista de productos </h2>
+
 <button (click)="toggleMostrarFavoritos()">
   {{ mostrarFavoritos ? "Mostrar todas" : "Mostrar favoritos" }}
 </button>
